# wasm-micro-runtime

./: .clang-format  .clang-tidy  .cmake-format.yml  .dockerignore  .gitignore  .gitmodules  ADOPTERS.md  ATTRIBUTIONS.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SConscript  SECURITY.md  SUMMARY.md  TSC_Charter.md  _clang-format  code_analysis.sh  hello.wasm  idf_component.yml  run.sh
build-scripts/esp-idf/wamr/: CMakeLists.txt
core/app-mgr/app-manager/: CMakeLists.txt  app_manager.c  app_manager.h  app_manager_host.c  app_manager_host.h  app_mgr.cmake  ble_msg.c  event.c  event.h  message.c  module_config.h  module_jeff.c  module_jeff.h  module_utils.c  module_wasm_app.c  module_wasm_app.h  module_wasm_lib.c  module_wasm_lib.h  resource_reg.c  watchdog.c  watchdog.h
core/shared-lib/platform/: CMakeLists.txt  Makefile
core/shared-lib/utils/: CMakeLists.txt  Makefile  bh_list.c  bh_log.c  bh_queue.c  runtime_timer.c  runtime_timer.h  shared_utils.cmake
core/shared/platform/: CMakeLists.txt
core/shared/utils/: CMakeLists.txt  Makefile  SConscript  bh_assert.c  bh_assert.h  bh_atomic.h  bh_bitmap.c  bh_bitmap.h  bh_common.c  bh_common.h  bh_definition.c  bh_hashmap.c  bh_hashmap.h  bh_list.c  bh_list.h  bh_log.c  bh_log.h  bh_memutils.c  bh_memutils.h  bh_platform.h  bh_queue.c  bh_queue.h  bh_time.c  bh_time.h  bh_vector.c  bh_vector.h  runtime_timer.c  runtime_timer.h  shared_utils.cmake
language-bindings/rust/: Cargo.toml  README.md  build.rs
language-bindings/rust/src/: function.rs  helper.rs  host_function.rs  instance.rs  lib.rs  local_error.rs  module.rs  runtime.rs  value.rs
samples/basic/: CMakeLists.txt  README.md  build.sh
samples/basic/src/: free_buffer_early.c  main.c  native_impl.c  read_sections.c
samples/basic/wasm-apps/: testapp.c
samples/checked-api/: CMakeLists.txt
samples/checked-api/src/: demo.c
samples/checked-api/wasm-apps/: CMakeLists.txt  fib.c
samples/custom-section/: CMakeLists.txt  README.md  build.sh  run.sh
samples/custom-section/src/: main.c  native_impl.c
samples/custom-section/wasm-apps/: custom_section.c  custom_section_payload.s
samples/debug-tools-optimized/: CMakeLists.txt  README.md  symbolicate.sh  verify.sh
samples/debug-tools-optimized/wasm-apps/: CMakeLists.txt  oob_access.c  oob_main.c  stackoverflow_main.c  stackoverflow_recurse.c
samples/debug-tools/wasm-apps/: CMakeLists.txt  trap.c
samples/import-func-callback/: CMakeLists.txt  README.md
samples/import-func-callback/src/: main.c
samples/import-func-callback/wasm-apps/: test.c
samples/linking/: CMakeLists.txt
samples/linking/cmake/: FindWASISDK.cmake
samples/linking/import-memory/: CMakeLists.txt  main.c
samples/linking/import-table/: CMakeLists.txt  main.c
samples/linking/lib/: CMakeLists.txt
samples/linking/raw/: CMakeLists.txt  main.c
samples/linking/wasm/: CMakeLists.txt  import_memory.c  import_table.c
samples/multi-module/: CMakeLists.txt  README.md
samples/multi-module/src/: main.c
samples/multi-module/wasm-apps/: CMakeLists.txt  mA.c  mB.c  mC.c
samples/multi-thread/: CMakeLists.txt  README.md
samples/multi-thread/wasm-apps/: CMakeLists.txt  main.c  main_thread_exception.c
samples/network/: CMakeLists.txt  README.md
samples/network/wasm-src/: CMakeLists.txt  tcp_client.c  tcp_server.c
samples/sandbox/: CMakeLists.txt  README.md  example.cc  functions.inc  lib.cc  library_runner.cc  libsandbox.cc  nosandbox.cc  sandbox.hh
samples/simple/: CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh  build_no_gui.sh  sample_test_run.py
samples/simple/src/: ext_lib_export.c  iwasm_main.c  main.c
samples/simple/wasm-apps/: connection.c  event_publisher.c  event_subscriber.c  gui.c  gui_lvgl_compatible.c  request_handler.c  request_sender.c  sensor.c  timer.c  wasi.c
samples/spawn-thread/: CMakeLists.txt  README.md
samples/spawn-thread/src/: main.c
samples/spawn-thread/wasm-apps/: CMakeLists.txt  sum.c
samples/wasm-c-api/: CMakeLists.txt  README.md
samples/wasm-c-api/src/: callback.c  callback_chain.c  callback_with_symbol.c  clone.c  clone.wat  empty_imports.c  envoy_filter_http_wasm_updated_example.wasm  global.c  globalexportimport-0.wat  globalexportimport-1.wat  globalexportimport.c  hello.c  hostref.c  memory.c  multi.c  reflect.c  serialize.c  table.c  threads.c  trap.c
test-tools/aot-compiler/: CMakeLists.txt  build_llvm.sh  ext_lib_export.c  main.c
test-tools/host-tool/: CMakeLists.txt
test-tools/host-tool/src/: host_tool_utils.c  host_tool_utils.h  main.c  transport.c  transport.h
tests/invalid-branch-hints/: CMakeLists.txt  create_samples.py  main.c
tests/unit/: CMakeLists.txt  README.md  unit_common.cmake
tests/unit/aot/: CMakeLists.txt  aot_test.cc
tests/unit/aot-loader/: CMakeLists.txt  aot_loader_test.cc
tests/unit/aot-stack-frame/: CMakeLists.txt  aot_stack_frame_test.cc
tests/unit/common/: mock_allocator.h  test_helper.h
tests/unit/compilation/: CMakeLists.txt  aot_compiler_test.cc  aot_emit_aot_file_test.cc  aot_emit_control_test.cc  aot_emit_function_test.cc  aot_emit_memory_test.cc  aot_emit_numberic_test.cc  aot_emit_parametric_test.cc  aot_emit_table_test.cc  aot_llvm_test.cc
tests/unit/component/: CMakeLists.txt  helpers.cc  helpers.h  test_binary_parser.cc
tests/unit/custom-section/: CMakeLists.txt  custom_section_test.cc
tests/unit/enhanced_unit_test/: CMakeLists.txt
tests/unit/exception-handling/: CMakeLists.txt  exception_handling_test.cc
tests/unit/gc/: CMakeLists.txt  gc_test.cc
tests/unit/instruction-metering/: CMakeLists.txt  instruction_metering_resume_test.cc
tests/unit/interpreter/: CMakeLists.txt  interpreter_test.cc  interpreter_test_enhance.cc
tests/unit/libc-builtin/: CMakeLists.txt  libc_builtin_test.cc
ts2wasm/runtime-library/: CMakeLists.txt  README.md  build.sh  main.c  wamr_config.cmake
wamr-compiler/: CMakeLists.txt  README.md  build_llvm.py  build_llvm.sh  build_llvm_arc.sh  build_llvm_xtensa.sh  main.c
wamr-wasi-extensions/socket/: CMakeLists.txt
(+2677 files in other folders)
