# Copyright (C) 2023 Liquid Reply GmbH. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "wamr-rust-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
wamr-sys = { path = "crates/wamr-sys", version = "0.1.0" }

[workspace]
members = ["crates/wamr-sys"]
exclude = ["examples/wasi-hello", "resources/test/hello"]
