# Copyright (C) 2019 Intel Corporation. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "wamr-rust-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
resolver = "2"

[dependencies]
wamr-sys = { path = "crates/wamr-sys", version = "0.1.0" }

[workspace]
members = ["crates/wamr-sys", ]
exclude = ["examples/wasi-hello", "resources/test/gcd", "resources/test/add-extra"]

[features]
llvmjit = ["wamr-sys/llvmjit"]
